MathJax works, but not all posts are fixed.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,14 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
+        <!-- MathJax -->
+        <script type="text/x-mathjax-config;executed=true">
+          MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+        </script>
+        <script type="text/javascript" 
+          src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+        </script>
+
     </head>
     <body>
 
@@ -39,6 +47,5 @@
             </div>
           </div>
         </div>
-
     </body>
 </html>
