LaTeX works in notebooks.

--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -28,3 +28,7 @@
   {% include custom/head.html %}
   {% include google_analytics.html %}
 </head>
+<!--- MathJax Configuration -->
+<script type="text/javascript"
+src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
