Add gallery support and more 2012 edits.

--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -57,7 +57,7 @@ body {
   }
 }
 $main-bg: #ffffff !default;
-$page-bg: #ffffff !default;
+$page-bg: #F4F4EA !default;
 
 // ////////////////////////////////////////
 // change the header colors
