--- a/source/_assets/stylesheets/screen.css
+++ b/source/_assets/stylesheets/screen.css
@@ -109,7 +109,7 @@ a {
 }
 
 html {
-  background: white url('/images/line-tile.png?1386014905') top left;
+  background: #f4f4ea url('/images/line-tile.png?1386014905') top left;
 }
 
 body > div {
@@ -1902,3 +1902,89 @@ body > footer p:last-child {
   Imported. Load order is alphabetical and styles can be overriden in
   custom/_style.scss which is loaded after all plugin stylesheets.
 */
+.gallery {
+  height: 171px;
+}
+
+.embed-video-container {
+  position: relative;
+  /* padding-bottom: 56.25%; */
+  /* 16/9 ratio */
+  /* padding-top: 30px; */
+  /* IE6 workaround*/
+  height: 0;
+  overflow: hidden;
+  -webkit-border-radius: 0.3em;
+  -moz-border-radius: 0.3em;
+  -ms-border-radius: 0.3em;
+  -o-border-radius: 0.3em;
+  border-radius: 0.3em;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0 1px 4px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.15) 0 1px 4px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0 1px 4px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: white 0.5em solid;
+}
+.embed-video-container iframe, .embed-video-container object, .embed-video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video-info {
+  font-size: 0.7em;
+  font-style: italic;
+}
+
+.ratio-16-9 {
+  padding-bottom: 56.25%;
+  /* 9/16*100 */
+}
+
+.ratio-4-3 {
+  padding-bottom: 75%;
+  /* 3/4*100 */
+}
+
+.ratio-1-1 {
+  padding-bottom: 100%;
+  /* ... */
+}
+
+a.youtube-lazy-link {
+  vertical-align: top;
+  background: #555;
+  text-decoration: none;
+  color: #DDD;
+  text-align: left;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  display: inline-block;
+}
+
+a.youtube-lazy-link:hover {
+  text-decoration: none;
+  color: #FFF;
+}
+
+.youtube-lazy-link-div {
+  width: 100%;
+  height: 100%;
+  background: url(http://lh4.googleusercontent.com/-QCeB6REIFlE/TuGUlY3N46I/AAAAAAAAAaI/9-urEUtpKcI/s800/youtube-play-button.png) center center no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.youtube-lazy-link-div:hover {
+  background: url(http://lh5.googleusercontent.com/-oBFjswrosz4/TuHqainRc3I/AAAAAAAAAbE/t3rMQuSJdLA/s800/youtube-play-button-hover.png) center center no-repeat;
+}
+
+.youtube-lazy-link-info {
+  position: absolute;
+  top: 0.6em;
+  left: 0.6em;
+}
