--- a/source/stylesheets/screen.css
+++ b/source/stylesheets/screen.css
@@ -57,6 +57,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /* To use the light Solarized highlighting theme uncomment the following line */
 /* If you want to tweak the Solarized colors you can do that here */
 /* Non highlighted code colors */
+html {
+  background: #fff !important;
+}
+
+body > div {
+  background: #fff !important;
+}
+body > div > div {
+  background: #fff !important;
+}
+
 /* non highlighted code colors */
 /* Navigation */
 /* Sidebar colors */
@@ -78,7 +89,7 @@ a:active {
 }
 
 aside.sidebar a {
-  color: #222222;
+  color: #333333;
 }
 aside.sidebar a:focus {
   color: #0181eb;
@@ -98,15 +109,15 @@ a {
 }
 
 html {
-  background: #252525 url('/images/line-tile.png?1386000006') top left;
+  background: #f4f4ea url('/images/line-tile.png?1386014905') top left;
 }
 
 body > div {
-  background: #f2f2f2 url('/images/noise.png?1386000006') top left;
-  border-bottom: 1px solid #bfbfbf;
+  background: #f2f2f2 url('/images/noise.png?1386014905') top left;
+  border-bottom: 1px solid #f2f2f2;
 }
 body > div > div {
-  background: #f8f8f8 url('/images/noise.png?1386000006') top left;
+  background: white url('/images/noise.png?1386014905') top left;
   border-right: 1px solid #e0e0e0;
 }
 
@@ -140,7 +151,7 @@ body > header h2 {
 
 body {
   line-height: 1.5em;
-  color: #222222;
+  color: #333333;
 }
 
 h1 {
@@ -295,20 +306,20 @@ article blockquote {
   font-size: 1.2em;
   line-height: 1.5em;
   padding-left: 1em;
-  border-left: 4px solid rgba(170, 170, 170, 0.5);
+  border-left: 4px solid rgba(119, 119, 119, 0.5);
 }
 article blockquote cite {
   font-style: italic;
 }
 article blockquote cite a {
-  color: #aaaaaa !important;
+  color: #777777 !important;
   word-wrap: break-word;
 }
 article blockquote cite:before {
   content: '\2014';
   padding-right: .3em;
   padding-left: .3em;
-  color: #aaaaaa;
+  color: #777777;
 }
 @media only screen and (min-width: 992px) {
   article blockquote {
@@ -630,33 +641,29 @@ body.sidebar-footer .toggle-sidebar {
   }
 }
 body > header {
-  background: #333333;
+  background: white;
 }
 body > header h1 {
   display: inline-block;
   margin: 0;
 }
 body > header h1 a, body > header h1 a:visited, body > header h1 a:hover {
-  color: #f2f2f2;
+  color: black;
   text-decoration: none;
 }
 body > header h2 {
   margin: .2em 0 0;
   font-size: 1em;
-  color: #aaaaaa;
+  color: #6b6b6b;
   font-weight: normal;
 }
 
 body > nav {
   position: relative;
-  background-color: #cccccc;
-  background: url('/images/noise.png?1386000006'), -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e0e0e0), color-stop(50%, #cccccc), color-stop(100%, #b0b0b0));
-  background: url('/images/noise.png?1386000006'), -webkit-linear-gradient(#e0e0e0, #cccccc, #b0b0b0);
-  background: url('/images/noise.png?1386000006'), -moz-linear-gradient(#e0e0e0, #cccccc, #b0b0b0);
-  background: url('/images/noise.png?1386000006'), -o-linear-gradient(#e0e0e0, #cccccc, #b0b0b0);
-  background: url('/images/noise.png?1386000006'), linear-gradient(#e0e0e0, #cccccc, #b0b0b0);
-  border-top: 1px solid #f2f2f2;
-  border-bottom: 1px solid #8c8c8c;
+  background-color: white;
+  background: white, white;
+  border-top: 1px solid #ababab;
+  border-bottom: 1px solid #ababab;
   padding-top: .35em;
   padding-bottom: .35em;
 }
@@ -681,11 +688,11 @@ body > nav form .search {
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  -webkit-box-shadow: #d1d1d1 0 1px;
-  -moz-box-shadow: #d1d1d1 0 1px;
-  box-shadow: #d1d1d1 0 1px;
-  background-color: #f2f2f2;
-  border: 1px solid #b3b3b3;
+  -webkit-box-shadow: white 0 1px;
+  -moz-box-shadow: white 0 1px;
+  box-shadow: white 0 1px;
+  background-color: white;
+  border: 1px solid gray;
   color: #888;
 }
 body > nav form .search:focus {
@@ -757,9 +764,9 @@ body > nav ul {
     margin: 0;
   }
   body > nav a {
-    color: #6b6b6b;
+    color: #383838;
     font-family: "PT Sans", "Helvetica Neue", Arial, sans-serif;
-    text-shadow: #ebebeb 0 1px;
+    text-shadow: white 0 1px;
     float: left;
     text-decoration: none;
     font-size: 1.1em;
@@ -767,18 +774,18 @@ body > nav ul {
     line-height: 1.5em;
   }
   body > nav a:visited {
-    color: #6b6b6b;
+    color: #383838;
   }
   body > nav a:hover {
-    color: #2b2b2b;
+    color: black;
   }
   body > nav li + li {
-    border-left: 1px solid #b0b0b0;
+    border-left: 1px solid #e3e3e3;
     margin-left: .8em;
   }
   body > nav li + li a {
     padding-left: .8em;
-    border-left: 1px solid #dedede;
+    border-left: 1px solid white;
   }
   body > nav form {
     float: right;
@@ -814,7 +821,7 @@ body > nav ul {
 }
 
 .no-placeholder body > nav .search {
-  background: #f2f2f2 url('/images/search.png?1386000006') 0.3em 0.25em no-repeat;
+  background: white url('/images/search.png?1386014905') 0.3em 0.25em no-repeat;
   text-indent: 1.3em;
 }
 
@@ -840,16 +847,16 @@ body > nav ul {
   position: relative;
   top: 0px;
   text-indent: -999999em;
-  background-color: #dedede;
+  background-color: white;
   border: 0;
   padding: 0;
 }
 .maskImage a[rel=subscribe-rss], .maskImage a[rel=subscribe-rss]:after {
-  -webkit-mask-image: url('/images/rss.png?1386000006');
-  -moz-mask-image: url('/images/rss.png?1386000006');
-  -ms-mask-image: url('/images/rss.png?1386000006');
-  -o-mask-image: url('/images/rss.png?1386000006');
-  mask-image: url('/images/rss.png?1386000006');
+  -webkit-mask-image: url('/images/rss.png?1386014905');
+  -moz-mask-image: url('/images/rss.png?1386014905');
+  -ms-mask-image: url('/images/rss.png?1386014905');
+  -o-mask-image: url('/images/rss.png?1386014905');
+  mask-image: url('/images/rss.png?1386014905');
   -webkit-mask-repeat: no-repeat;
   -moz-mask-repeat: no-repeat;
   -ms-mask-repeat: no-repeat;
@@ -863,25 +870,25 @@ body > nav ul {
   position: absolute;
   top: -1px;
   left: 0;
-  background-color: #ababab;
+  background-color: #787878;
 }
 .maskImage a[rel=subscribe-rss]:hover:after {
-  background-color: #9e9e9e;
+  background-color: #6b6b6b;
 }
 .maskImage a[rel=subscribe-email] {
   position: relative;
   top: 0px;
   text-indent: -999999em;
-  background-color: #dedede;
+  background-color: white;
   border: 0;
   padding: 0;
 }
 .maskImage a[rel=subscribe-email], .maskImage a[rel=subscribe-email]:after {
-  -webkit-mask-image: url('/images/email.png?1386000006');
-  -moz-mask-image: url('/images/email.png?1386000006');
-  -ms-mask-image: url('/images/email.png?1386000006');
-  -o-mask-image: url('/images/email.png?1386000006');
-  mask-image: url('/images/email.png?1386000006');
+  -webkit-mask-image: url('/images/email.png?1386014905');
+  -moz-mask-image: url('/images/email.png?1386014905');
+  -ms-mask-image: url('/images/email.png?1386014905');
+  -o-mask-image: url('/images/email.png?1386014905');
+  mask-image: url('/images/email.png?1386014905');
   -webkit-mask-repeat: no-repeat;
   -moz-mask-repeat: no-repeat;
   -ms-mask-repeat: no-repeat;
@@ -895,10 +902,10 @@ body > nav ul {
   position: absolute;
   top: -1px;
   left: 0;
-  background-color: #ababab;
+  background-color: #787878;
 }
 .maskImage a[rel=subscribe-email]:hover:after {
-  background-color: #9e9e9e;
+  background-color: #6b6b6b;
 }
 
 article {
@@ -922,7 +929,7 @@ article header h1 a:hover {
 }
 article header p {
   font-size: .9em;
-  color: #aaaaaa;
+  color: #777777;
   margin: 0;
 }
 article header p.meta {
@@ -1028,12 +1035,12 @@ article > footer p.meta {
   color: #0181eb;
 }
 #content .blog-index a[rel=full-article] {
-  background: #ebebeb;
+  background: #f2f2f2;
   display: inline-block;
   padding: .4em .8em;
   margin-right: .5em;
   text-decoration: none;
-  color: #666666;
+  color: #555555;
   -webkit-transition: background-color 0.5s;
   -moz-transition: background-color 0.5s;
   -o-transition: background-color 0.5s;
@@ -1042,7 +1049,7 @@ article > footer p.meta {
 #content .blog-index a[rel=full-article]:hover {
   background: #0181eb;
   text-shadow: none;
-  color: #f8f8f8;
+  color: white;
 }
 #content .blog-index footer {
   margin-top: 1em;
@@ -1064,7 +1071,7 @@ article > footer p.meta {
 }
 #content div.pagination a {
   text-decoration: none;
-  color: #aaaaaa;
+  color: #777777;
 }
 #content div.pagination a.prev {
   position: absolute;
@@ -1103,7 +1110,7 @@ p.meta + .sharing {
   text-align: right;
   font-size: 13px;
   line-height: 1.45em;
-  background: #073642 url('/images/noise.png?1386000006') top left !important;
+  background: #073642 url('/images/noise.png?1386014905') top left !important;
   border-right: 1px solid #00232c !important;
   -webkit-box-shadow: #083e4b -1px 0 inset;
   -moz-box-shadow: #083e4b -1px 0 inset;
@@ -1171,7 +1178,7 @@ html .gist .gist-file .gist-meta {
   border: 1px solid #083e4b !important;
   color: #586e75;
   font-size: .7em !important;
-  background: #073642 url('/images/noise.png?1386000006') top left;
+  background: #073642 url('/images/noise.png?1386014905') top left;
   line-height: 1.5em;
 }
 html .gist .gist-file .gist-meta a {
@@ -1199,7 +1206,7 @@ html .gist .gist-file .gist-meta a[href*=raw] {
 }
 
 pre {
-  background: #002b36 url('/images/noise.png?1386000006') top left;
+  background: #002b36 url('/images/noise.png?1386014905') top left;
   -webkit-border-radius: 0.4em;
   -moz-border-radius: 0.4em;
   -ms-border-radius: 0.4em;
@@ -1253,7 +1260,7 @@ p pre code, li pre code {
   padding: .8em;
   overflow-x: auto;
   line-height: 1.45em;
-  background: #002b36 url('/images/noise.png?1386000006') top left !important;
+  background: #002b36 url('/images/noise.png?1386014905') top left !important;
   color: #93a1a1 !important;
   /* Comment */
   /* Comment.Multiline */
@@ -1545,7 +1552,7 @@ figure.code .highlight {
   -webkit-border-top-right-radius: 5px;
   border-top-right-radius: 5px;
   font-family: "Helvetica Neue", Arial, "Lucida Grande", "Lucida Sans Unicode", Lucida, sans-serif;
-  background: #aaaaaa url('/images/code_bg.png?1386000006') top repeat-x;
+  background: #aaaaaa url('/images/code_bg.png?1386014905') top repeat-x;
   border: 1px solid #565656;
   border-top-color: #cbcbcb;
   border-left-color: #a5a5a5;
@@ -1572,7 +1579,7 @@ figure.code .highlight {
 }
 
 #blog-archives {
-  color: #aaaaaa;
+  color: #777777;
 }
 #blog-archives article {
   padding: 1em 0 1em;
@@ -1587,7 +1594,7 @@ figure.code .highlight {
   margin: 0;
 }
 #blog-archives h1 {
-  color: #222222;
+  color: #333333;
   margin-bottom: .3em;
 }
 #blog-archives h2 {
@@ -1609,7 +1616,7 @@ figure.code .highlight {
   color: #0181eb;
 }
 #blog-archives a.category, #blog-archives time {
-  color: #aaaaaa;
+  color: #777777;
 }
 #blog-archives .entry-content {
   display: none;
@@ -1685,7 +1692,7 @@ figure.code .highlight {
 
 aside.sidebar {
   overflow: hidden;
-  color: #4b4b4b;
+  color: #595959;
   text-shadow: white 0 1px;
 }
 aside.sidebar section {
@@ -1736,14 +1743,14 @@ aside.sidebar a {
   transition: color 0.5s;
 }
 aside.sidebar:hover a {
-  color: #222222;
+  color: #333333;
 }
 aside.sidebar:hover a:hover {
   color: #0181eb;
 }
 
 .aside-alt-link, #pinboard_linkroll .pin-tag {
-  color: #7e7e7e;
+  color: #8c8c8c;
 }
 .aside-alt-link:hover, #pinboard_linkroll .pin-tag:hover {
   color: #0181eb;
@@ -1758,7 +1765,7 @@ aside.sidebar:hover a:hover {
     bottom: 0;
     display: inline-block;
     text-decoration: none;
-    color: #cecece;
+    color: #b4b4b4;
     width: 9px;
     cursor: pointer;
   }
@@ -1782,7 +1789,7 @@ aside.sidebar:hover a:hover {
     -webkit-border-bottom-right-radius: 0.3em;
     border-bottom-right-radius: 0.3em;
     text-align: center;
-    background: #f8f8f8 url('/images/noise.png?1386000006') top left;
+    background: white url('/images/noise.png?1386014905') top left;
     border-bottom: 1px solid #e0e0e0;
     border-right: 1px solid #e0e0e0;
     content: "\00BB";
@@ -1861,14 +1868,10 @@ aside.sidebar:hover a:hover {
 body > footer {
   font-size: .8em;
   color: #888888;
-  text-shadow: #d9d9d9 0 1px;
-  background-color: #cccccc;
-  background: url('/images/noise.png?1386000006'), -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e0e0e0), color-stop(50%, #cccccc), color-stop(100%, #b0b0b0));
-  background: url('/images/noise.png?1386000006'), -webkit-linear-gradient(#e0e0e0, #cccccc, #b0b0b0);
-  background: url('/images/noise.png?1386000006'), -moz-linear-gradient(#e0e0e0, #cccccc, #b0b0b0);
-  background: url('/images/noise.png?1386000006'), -o-linear-gradient(#e0e0e0, #cccccc, #b0b0b0);
-  background: url('/images/noise.png?1386000006'), linear-gradient(#e0e0e0, #cccccc, #b0b0b0);
-  border-top: 1px solid #f2f2f2;
+  text-shadow: white 0 1px;
+  background-color: white;
+  background: white, white;
+  border-top: 1px solid white;
   position: relative;
   padding-top: 1em;
   padding-bottom: 1em;
@@ -1882,10 +1885,10 @@ body > footer {
   z-index: 1;
 }
 body > footer a {
-  color: #6b6b6b;
+  color: #9e9e9e;
 }
 body > footer a:visited {
-  color: #6b6b6b;
+  color: #9e9e9e;
 }
 body > footer a:hover {
   color: #484848;
@@ -1899,3 +1902,89 @@ body > footer p:last-child {
   Imported. Load order is alphabetical and styles can be overriden in
   custom/_style.scss which is loaded after all plugin stylesheets.
 */
+.gallery {
+  height: 171px;
+}
+
+.embed-video-container {
+  position: relative;
+  /* padding-bottom: 56.25%; */
+  /* 16/9 ratio */
+  /* padding-top: 30px; */
+  /* IE6 workaround*/
+  height: 0;
+  overflow: hidden;
+  -webkit-border-radius: 0.3em;
+  -moz-border-radius: 0.3em;
+  -ms-border-radius: 0.3em;
+  -o-border-radius: 0.3em;
+  border-radius: 0.3em;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0 1px 4px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.15) 0 1px 4px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0 1px 4px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: white 0.5em solid;
+}
+.embed-video-container iframe, .embed-video-container object, .embed-video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video-info {
+  font-size: 0.7em;
+  font-style: italic;
+}
+
+.ratio-16-9 {
+  padding-bottom: 56.25%;
+  /* 9/16*100 */
+}
+
+.ratio-4-3 {
+  padding-bottom: 75%;
+  /* 3/4*100 */
+}
+
+.ratio-1-1 {
+  padding-bottom: 100%;
+  /* ... */
+}
+
+a.youtube-lazy-link {
+  vertical-align: top;
+  background: #555;
+  text-decoration: none;
+  color: #DDD;
+  text-align: left;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  display: inline-block;
+}
+
+a.youtube-lazy-link:hover {
+  text-decoration: none;
+  color: #FFF;
+}
+
+.youtube-lazy-link-div {
+  width: 100%;
+  height: 100%;
+  background: url(http://lh4.googleusercontent.com/-QCeB6REIFlE/TuGUlY3N46I/AAAAAAAAAaI/9-urEUtpKcI/s800/youtube-play-button.png) center center no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.youtube-lazy-link-div:hover {
+  background: url(http://lh5.googleusercontent.com/-oBFjswrosz4/TuHqainRc3I/AAAAAAAAAbE/t3rMQuSJdLA/s800/youtube-play-button-hover.png) center center no-repeat;
+}
+
+.youtube-lazy-link-info {
+  position: absolute;
+  top: 0.6em;
+  left: 0.6em;
+}
