--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -19,8 +19,8 @@
   {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
   <link rel="canonical" href="{{ canonical }}">
   <link href="{{ root_url }}/favicon.png" rel="icon">
-  <link href="{{ asset_path }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
-  <link href="{{ asset_path }}/stylesheets/ipython.css" rel="stylesheet" type="text/css">
+  {% stylesheet screen %}
+  {% stylesheet ipython %}
   <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
   <script src="{{ asset_path }}/javascripts/modernizr-2.0.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
