--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,3 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>I'm a PhD student researching soft condensed matter physics at Johns Hopkins University. I'm interested in squishy physics, data analysis, and reproducible research. Outside of the lab, I sing and dance in Baltimore.</p>
 </section>
