--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -21,6 +21,7 @@
   <link href="{{ root_url }}/favicon.png" rel="icon">
   {% stylesheet screen %}
   {% stylesheet ipython %}
+  {% stylesheet highlight %}
   <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
   <script src="{{ asset_path }}/javascripts/modernizr-2.0.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
